--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -21,26 +21,27 @@
     "@angular/platform-browser": "^20.2.3",
     "@angular/platform-browser-dynamic": "^20.2.3",
     "@angular/platform-server": "^20.2.3",
-    "@astrojs/markdoc": "^0.15.5",
+    "@astrojs/mdx": "^4.3.5",
     "@astrojs/starlight": "^0.35.2",
-    "@astrojs/starlight-markdoc": "^0.5.0",
     "@astrojs/starlight-tailwind": "^4.0.1",
     "@iconify/json": "^2.2.379",
     "@pagefind/default-ui": "^1.3.0",
     "@tailwindcss/vite": "^4.0.7",
     "astro": "^5.6.1",
     "fast-glob": "3.3.3",
+    "rehype-pretty-code": "^0.14.1",
     "rxjs": "^7.8.2",
     "sharp": "^0.34.2",
+    "shiki": "^2.5.0",
     "tailwindcss": "^4.0.7",
     "tslib": "^2.8.1",
     "unplugin-icons": "^22.2.0",
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular/cdk": "^19.2.19",
+    "@angular/cdk": "^20.2.2",
     "@ngxi/lucide": "^0.12.26",
-    "@radix-ng/primitives": "^0.33.2",
+    "@radix-ng/primitives": "^0.43.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "rimraf": "^6.0.1",
