--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -31,7 +31,9 @@
     "fast-glob": "3.3.3",
     "rehype-pretty-code": "^0.14.1",
     "rxjs": "^7.8.2",
-    "sharp": "^0.34.2",
+    "satori": "^0.18.2",
+    "satori-html": "^0.3.2",
+    "sharp": "^0.34.3",
     "shiki": "^2.5.0",
     "tailwindcss": "^4.0.7",
     "tslib": "^2.8.1",
